devtools/client/themes/tooltips.css
/* ... */
.devtools-tooltip-inactive-css p {
  margin-block-start: 0;
  margin-block-end: calc(1em - 4px);
}

.devtools-tooltip-inactive-css p:last-child {
  margin-block-end: 0;
}

.devtools-tooltip-inactive-css .link {
  color: var(--theme-highlight-blue);
  cursor: pointer;
}



.devtools-tooltip-tiles {
  background-color: #eee;
  background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc),
    linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
  background-size: 20px 20px;
  background-position: 0 0, 10px 10px;
}

.tooltip-container {
  display: none;
  position: fixed;
  z-index: 9999;
  background: transparent;
  pointer-events: none;
  overflow: hidden;
  filter: drop-shadow(0 2px 8px var(--theme-tooltip-shadow));
}

.tooltip-xul-wrapper {
  -moz-appearance: none;
  background: transparent;
  overflow: visible;
  border-style: none;
}

.tooltip-xul-wrapper .tooltip-container {
  position: absolute;
}

.tooltip-top {
  flex-direction: column;
}

.tooltip-bottom {
  flex-direction: column-reverse;
}

.tooltip-panel{
  background-color: var(--theme-tooltip-background);
  pointer-events: all;
  flex-grow: 1;
}

.tooltip-visible {
  display: flex;
}

.tooltip-hidden {
  display: flex;
  visibility: hidden;
}



.tooltip-flexible-height .tooltip-panel {
  
  flex-grow: 0;
}

.tooltip-flexible-height .tooltip-filler {
  
  flex-grow: 1;
}



.tooltip-xul-wrapper[type="arrow"][side] {
  margin: 0;
}




.tooltip-xul-wrapper[type="arrow"] .panel-arrowcontent {
  margin: 0;
  padding: 0;
  background: transparent;
  border: none;
  box-shadow: none;
}



.tooltip-xul-wrapper .tooltip-container {
  
  filter: none;
}

.tooltip-container[type="arrow"] > .tooltip-panel {
  position: relative;
  min-height: 10px;
  box-sizing: border-box;
  width: 100%;
  border-radius: var(--theme-arrowpanel-border-radius);
}

.tooltip-top[type="arrow"] .tooltip-panel {
  top: 0;
}

.tooltip-bottom[type="arrow"] .tooltip-panel {
  bottom: 0;
}

.tooltip-arrow {
  position: relative;
  height: 16px;
  width: 32px;
  overflow: hidden;
  flex-shrink: 0;
}


.tooltip-container:-moz-locale-dir(rtl) {
  direction: ltr;
}

.tooltip-panel:-moz-locale-dir(rtl) {
  direction: rtl;
}

.tooltip-top .tooltip-arrow {
  margin-top: -1px;
}

.tooltip-bottom .tooltip-arrow {
  margin-bottom: -1px;
}

.tooltip-arrow:before {
  content: "";
  position: absolute;
  width: 21px;
  height: 21px;
  margin-left: 4px;
  background: linear-gradient(-45deg,
    var(--theme-tooltip-background) 50%, transparent 50%);
  border: 0 none;
  pointer-events: all;
}

.tooltip-bottom .tooltip-arrow:before {
  margin-top: 5px;
  transform: rotate(225deg);
}

.tooltip-top .tooltip-arrow:before {
  margin-top: -12px;
  transform: rotate(45deg);
}


.tooltip-container[type="arrow"]:not(.tooltip-container-xul) > .tooltip-panel,
.tooltip-container[type="arrow"]:not(.tooltip-container-xul) > .tooltip-arrow::before {
  border: 1px solid var(--theme-arrowpanel-border-color);
}



.tooltip-container[type="doorhanger"] > .tooltip-panel {
  padding: 2px 0;
  color: var(--theme-arrowpanel-color);
  margin: 4px;
  max-width: 320px;
}

.tooltip-container[type="doorhanger"] > .tooltip-panel,
.tooltip-container[type="doorhanger"] > .tooltip-arrow::before {
  background: var(--theme-arrowpanel-background);
  border: 1px solid var(--theme-arrowpanel-border-color);
  border-radius: var(--theme-arrowpanel-border-radius);
  box-shadow: 0 0 4px hsla(210,4%,10%,.2);
}

:root[platform="mac"] .tooltip-container[type="doorhanger"] > .tooltip-panel,
:root[platform="mac"] .tooltip-container[type="doorhanger"] > .tooltip-arrow::before {
  box-shadow: none;
  







}

:root[platform="mac"].theme-light .tooltip-container[type="doorhanger"] > .tooltip-panel,
:root[platform="mac"].theme-light .tooltip-container[type="doorhanger"] > .tooltip-arrow::before {
  border: none;
}

.tooltip-container[type="doorhanger"] > .tooltip-arrow {
  
  --arrow-width: 20px;

  
  --shadow-radius: 4px;
  --shadow-margin: calc(var(--shadow-radius) / 2);

  




  width: calc(var(--arrow-width) + 2 * var(--shadow-margin));
  height: calc(var(--arrow-width) / 2 + var(--shadow-margin));
}

.tooltip-container[type="doorhanger"] > .tooltip-arrow::before {
  
  box-sizing: border-box;

  
  border-radius: 0;

  





  --sin-45: 0.707106781;
  --square-side: calc(var(--arrow-width) / 2 / var(--sin-45));
  width: var(--square-side);
  height: var(--square-side);

  









  --overhang: calc((var(--arrow-width) - var(--square-side)) / 2);
  margin-left: calc(var(--overhang) + var(--shadow-margin));
}

.tooltip-container[type="doorhanger"].tooltip-top > .tooltip-panel {
  



  margin-bottom: 0;
  padding-top: 6px;
  padding-bottom: 2px;
}

.tooltip-container[type="doorhanger"].tooltip-bottom > .tooltip-panel {
  



  margin-top: 0;
  padding-top: 6px;
  padding-bottom: 6px;
}

.tooltip-container[type="doorhanger"].tooltip-top > .tooltip-arrow {
  
  margin-top: -1px;
}

.tooltip-container[type="doorhanger"].tooltip-bottom > .tooltip-arrow {
  
  margin-bottom: -1px;
}

.tooltip-container[type="doorhanger"].tooltip-top > .tooltip-arrow::before {
  
  margin-top: calc(var(--square-side) / -2);
}

.tooltip-container[type="doorhanger"].tooltip-bottom > .tooltip-arrow::before {
  
  margin-top: calc(var(--overhang) + var(--shadow-margin));
}

.tooltip-container[type="doorhanger"] .tooltip-panel ul {
  

  display: block;
}

.tooltip-container[type="doorhanger"] .menuitem > .command {
  display: flex;
  align-items: baseline;
  margin: 0;
  padding: 4px 12px;
  outline: none;
  



  margin-inline-end: 15px;
}

.tooltip-container[type="doorhanger"] .menuitem > button.command:-moz-any([role="menuitem"],[role="menuitemcheckbox"]) {
  -moz-appearance: none;
  border: none;
  color: var(--theme-arrowpanel-color);
  background-color: transparent;
  text-align: start;
  width: 100%;
}
/* ... */

