Bug 1573804 - Fix dropdown tooltip arrow RTL alignment in devtools HTML documents. r=ntim
Differential Revision: https://phabricator.services.mozilla.com/D42538

UltraBlame original commit: 7453f613852f5aaf8ebf9271d1d57684ae7e940f

--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -223,11 +223,13 @@ strong {
 }
 
 
-.tooltip-container:-moz-locale-dir(rtl) {
+.tooltip-container:-moz-locale-dir(rtl),
+.tooltip-container:dir(rtl) {
   direction: ltr;
 }
 
-.tooltip-panel:-moz-locale-dir(rtl) {
+.tooltip-panel:-moz-locale-dir(rtl),
+.tooltip-panel:dir(rtl) {
   direction: rtl;
 }
 
